# Figures_Dashboard

./: README.md
.github/workflows/: release.yml
frontend/: index.html
frontend/js/: api.js  components.js  router.js  store.js  themes.js
frontend/js/pages/: dashboard.js  envio.js  estoque.js  impressoras.js  pedidos.js  settings.js
frontend/styles/: animations.css  base.css  components.css  layout.css  tokens.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  models.rs  storage.rs
src-tauri/src/commands/: calculator.rs  clients.rs  envio.rs  estoque.rs  gcode.rs  mod.rs  printers.rs  settings.rs
